[package]
name       = "ibc-relayer"
version    = "0.7.2"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    Implementation of an IBC Relayer in Rust, as a library.
"""

[features]
default = ["std", "eyre_tracer"]
std = [
    "flex-error/std"
]
eyre_tracer = ["flex-error/eyre_tracer"]
profiling = []
telemetry = ["ibc-telemetry"]

[dependencies]
ibc           = { version = "0.7.2", path = "../modules" }
ibc-proto     = { version = "0.11.0", path = "../proto" }
ibc-telemetry = { version = "0.7.2", path = "../telemetry", optional = true }

subtle-encoding = "0.5"
async-trait = "0.1.50"
humantime-serde = "1.0.0"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_derive = "1.0"
thiserror = "1.0.29"
toml = "0.5"
tracing = "0.1.28"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
serde_json = { version = "1" }
bytes = "1.0.0"
prost = "0.8"
prost-types = "0.8"
futures = "0.3.17"
crossbeam-channel = "0.5.1"
k256 = { version = "0.9.6", features = ["ecdsa-core", "ecdsa", "sha256"]}
hex = "0.4"
bitcoin = { version = "=0.27", features = ["use-serde"] }
tiny-bip39 = "0.8.0"
hdpath = { version = "0.6.0", features = ["with-bitcoin"] }
sha2 = "0.9.8"
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
ripemd160 = "0.9.1"
bech32 = "0.8.1"
itertools = "0.10.1"
tonic = { version = "0.5", features = ["tls", "tls-roots"] }
dirs-next = "2.0.0"
retry = { version = "1.3.0", default-features = false }
async-stream = "0.3.2"
http = "0.2.4"
flex-error = { version = "0.4.2", default-features = false }
signature = "1.3.0"
anyhow = "1.0.44"
fraction = {version = "0.9.0", default-features = false }
semver = "1.0"
uint = "0.9"
tendermint = {git = "https://github.com/ChorusOne/tendermint-rs", branch = "giulio/prost_0_8", features = ["secp256k1"]}
tendermint-rpc = {git = "https://github.com/ChorusOne/tendermint-rs", branch = "giulio/prost_0_8", features = ["http-client", "websocket-client"]}
tendermint-light-client = {git = "https://github.com/ChorusOne/tendermint-rs", branch = "giulio/prost_0_8", features = ["rpc-client", "secp256k1", "unstable"], default-features = false}
tendermint-proto = {git = "https://github.com/ChorusOne/tendermint-rs", branch = "giulio/prost_0_8"}

#web3 = {path = "/home/giulio/src/github.com/ChorusOne/rust-web3", features = ["celo"]}
web3 = {git = "https://github.com/ChorusOne/rust-web3", branch = "celo", features = ["celo"]}
#celo-types = {git = "https://github.com/ChorusOne/celo-light-client", branch="giulio/improvs"}
celo-types = {path = "/home/giulio/src/github.com/ChorusOne/celo-light-client/types", features = ["web3_support", "serialize"]}
rlp = {version = "0.5"}
ethabi = {version = "14"}
ethabi-derive = {version = "14"}
ethabi-contract = {version = "11"}
url = {version = "2", features = ["serde"]}
chrono = {version = "0.4"}


[dev-dependencies]
ibc = { version = "0.7.2", path = "../modules", features = ["mocks"] }
serial_test = "0.5.0"
env_logger = "0.9.0"
tracing-subscriber = "0.2.24"
test-env-log = { version = "0.2.7", features = ["trace"] }

# Needed for generating (synthetic) light blocks.
tendermint-testgen = {git = "https://github.com/ChorusOne/tendermint-rs", branch = "giulio/prost_0_8"}
